# CEngine

./: CMakeLists.txt  README.md
include/CEngine/: AnimatedSprite.h  Animation.h  AnimationLoader.h  Font.h  SpriteSheet.h  SpriteSheetLoader.h  utils.h
src/: AnimatedSprite.cpp  Animation.cpp  AnimationLoader.cpp  Font.cpp  SpriteSheet.cpp  SpriteSheetLoader.cpp  utils.cpp
